Implemented the leaderboard renderer.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- common for all pages -->
     <script src="https://gssoc.girlscript.tech/resource/2020/data_results.js"></script>
     <!-- only for this page -->
-    <script src="https://gssoc.girlscript.tech/js/leaderboard.js" defer></script>
+    <script src="/leaderboard.js" defer></script>
     <!-- only for this page -->
   </head>
 
@@ -88,6 +88,7 @@
                 <th class="table-heading" data-tippy-content="Position">#</th>
                 <th class="table-heading" data-tippy-content="Rank">Rank</th>
                 <th class="table-heading" data-tippy-content="GitHub username">Username</th>
+                <th class="table-heading" data-tippy-content="Total Number of Eligible PRs">PR Count</th>
                 <th class="table-heading" data-tippy-content="Score calculated based on merged PRs">Score</th>
               </tr>
             </thead>
