Added a note for ranks & nulls.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="alert alert-info text-center pt-0 my-3">
+              <h3 class="m-0">
+                <small><small>Ranks, Low Scores &amp; Null Scores!</small></small>
+              </h3>
+              <p class="m-0">Please do not see the rank. It's not correct one. It's just the index. Will fix it later.</p>
+              <p class="m-0">Some users might have noticed there are less scores and null scores.</p>
+              <p>Please kindly check <a target="_blank" href="https://3kb5l.csb.app/">this</a> to find if you have some invalid PRs under your name.</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="container container--table">
         <!-- LEADERBOARD TABLE -->
         <div class="table-container">
@@ -98,6 +112,7 @@
                 <td class="table-data-id"><div class="loader"></div></td>
                 <td class="table-data-rank"><div class="loader"></div></td>
                 <td class="table-username"><div class="loader"></div></td>
+                <td class="table-score"><div class="loader"></div></td>
                 <td class="table-score"><div class="loader"></div></td>
               </tr>
             </tbody>
