--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
           <div class="col-12">
             <div class="alert alert-info text-center pt-0 my-3">
               <h3 class="m-0">
-                <small><small>Ranks, Low Scores &amp; Null Scores!</small></small>
+                <small><small>Low Scores &amp; Null Scores!</small></small>
               </h3>
-              <p class="m-0">Please do not see the rank. It's not correct one. It's just the index. Will fix it later.</p>
               <p class="m-0">Some users might have noticed there are less scores and null scores.</p>
               <p>Please kindly check <a target="_blank" href="https://3kb5l.csb.app/">this</a> to find if you have some invalid PRs under your name.</p>
             </div>
