--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               </h3>
               <p class="m-0">Leaderboard was last updated on 7th April 12:30 pm IST.</p>
               <p class="m-0">Some users might have noticed there are less scores and null scores.</p>
-              <p>Please kindly check <a target="_blank" href="https://3kb5l.csb.app/">this</a> to find if you have some invalid PRs under your name.</p>
+              <p>Please kindly check <a target="_blank" href="https://x5vhd.csb.app/">this</a> to find if you have some invalid PRs under your name.</p>
             </div>
           </div>
         </div>
