Updated JSON Data and time.

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
               <h3 class="m-0">
                 <small><small>Low Scores &amp; Null Scores!</small></small>
               </h3>
-              <p class="m-0">Leaderboard was last updated on 8th April 12:00 pm IST.</p>
+              <p class="m-0">Leaderboard was last updated on <strong>8th April 2:30 pm IST</strong>.</p>
               <p class="m-0">Some users might have noticed there are less scores and null scores.</p>
               <p class="m-0">Please kindly check <a target="_blank" href="https://qwd5g.csb.app/">this</a> to find if you have some invalid PRs under your name.</p>
-              <p class="m-0">If you're interested to know how your scores are calculated, please see <a target="_blank" href="https://5cg5x.csb.app/">GSSoC 21 Score Checker</a>.</p>
+              <p class="m-0">If you're interested to know how your scores are calculated, please see <a target="_blank" href="https://wmcen.csb.app/">GSSoC 21 Score Checker</a>.</p>
               <p>The <a target="_blank" href="https://rjbtb.csb.app/">deployment log</a> is available, in case if you are curious, you can check it to see if <a target="_blank" href="https://github.com/praveenscience/GSSoC21-Leaderboard-Projects/blob/main/projects.json">all the projects</a> are covered. If not, raise a PR.</p>
             </div>
           </div>
