Strong Time Value.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <!-- only for this page -->
     <script src="/leaderboard.js" defer></script>
     <!-- only for this page -->
+    <style>.prav-strong {font-weight: 600;}</style>
   </head>
 
   <body>
@@ -86,7 +87,7 @@
               <h3 class="m-0">
                 <small><small>Low Scores &amp; Null Scores!</small></small>
               </h3>
-              <p class="m-0">Leaderboard was last updated on <strong>8th April 2:30 pm IST</strong>.</p>
+              <p class="m-0">Leaderboard was last updated on <strong class="prav-strong">8th April 2:30 pm IST</strong>.</p>
               <p class="m-0">Some users might have noticed there are less scores and null scores.</p>
               <p class="m-0">Please kindly check <a target="_blank" href="https://qwd5g.csb.app/">this</a> to find if you have some invalid PRs under your name.</p>
               <p class="m-0">If you're interested to know how your scores are calculated, please see <a target="_blank" href="https://wmcen.csb.app/">GSSoC 21 Score Checker</a>.</p>
