Profile page link removed.

--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
 
                 <ul id="nav-list" class="hide-on-med-and-down main-menu right" role="navigation" aria-label="Main">
                     <li><a href="https://gssoc.girlscript.tech/index.html#about">About</a></li>
-                    <li><a href="https://gssoc.girlscript.tech/profile.html">Profile</a></li>
+                    <!-- <li><a href="https://gssoc.girlscript.tech/profile.html">Profile</a></li> -->
                     <!-- <li><a href="index.html#register">Register</a></li> -->
                     <li><a href="https://gssoc.girlscript.tech/schedule.html">Schedule</a></li>
                     <li><a href="https://gssoc.girlscript.tech/projects.html">Projects</a></li>
