Added Leaderboard Link.

--- a/header.html
+++ b/header.html
@@ -49,6 +49,7 @@
                     <!-- <li><a href="index.html#register">Register</a></li> -->
                     <li><a href="https://gssoc.girlscript.tech/index.html#schedule">Schedule</a></li>
                     <li><a href="https://gssoc.girlscript.tech/projects.html">Projects</a></li>
+                    <li><a href="https://gssoc21lb.prav.xyz/">Leaderboard</a></li>
                     <li><a href="https://gssoc.girlscript.tech/index.html#sponsors">Sponsors</a></li>
                     <li><a href="https://gssoc.girlscript.tech/FAQs.html">FAQs</a></li>
                     <li><a href="https://gssoc.girlscript.tech/team.html">Team</a></li>
